- fix list item overflow

--- a/src/components/FileLoader/style.css
+++ b/src/components/FileLoader/style.css
@@ -98,15 +98,23 @@
     display: flex;
     gap: var(--lgs-gutter-s);
     align-items: center;
+    margin-right: var(--lgs-gutter);
 }
 
 .drag-and-drop-list li sl-icon:nth-child(2){
     margin-left: auto;
-    margin-right: var(--lgs-gutter);
 }
 
 .drag-and-drop-list li sl-icon{
     font-size: var(--sl-font-size-large);
+    flex: 0 0 auto;
+}
+
+.drag-and-drop-list li span {
+    flex-grow: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .read-journey-success {
